--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
   background-color: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+ 
+}
+
+
+#parrafo {
+  padding: 0.5rem 0;
+}
+
+
+#tareasInput {
+  margin: 0.5rem 0;
+  width: 25rem;
+  padding:0.5rem;
 }
 
 #btn-add {
@@ -15,6 +33,12 @@ body {
 
 #div-container {
   display: flex;
+  gap: 2rem;
+  padding: 1rem;
+}
+
+th, td {
+  padding: 0.5rem;
 }
 
 .btn-eliminar {
@@ -28,3 +52,8 @@ body {
   margin: 10px;
 }
 
+#btnAgregar {
+  padding:0.5rem;
+  font-weight: bold;
+  font
+}
